--- a/Day1/index.html
+++ b/Day1/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=p, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task 1</title>
 </head>
-<body>
-    <p>This is new Page</p>
-</body>
+
+    <frameset cols="25%,75%">
+        <frame src="a.html" name="frame1">
+        <frame src="b.htm" name="frame2">
+    </frameset>
+   
+
 </html>
