--- a/Day1/index.html
+++ b/Day1/index.html
@@ -6,10 +6,18 @@
     <title>Task 1</title>
 </head>
 
-    <frameset cols="25%,75%">
-        <frame src="a.html" name="frame1">
-        <frame src="b.htm" name="frame2">
+
+    <frameset rows="*,*,*">
+        <frame src="a.html"></frame>
+        <frame src="a.html"></frame>
+        <frame src="a.html"></frame>
     </frameset>
+    <frameset cols="*,*,*">
+        <frame src="a.html"></frame>
+        <frame src="a.html"></frame>
+        <frame src="a.html"></frame>
+    </frameset>
+    
    
 
 </html>
