--- a/Day1/b.htm
+++ b/Day1/b.htm
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- <a href="https://abes.ac.in/" target="frame2">Welcome to abes</a> -->
-</body>
-</html>
+<html>​
+<body bgcolor="GREEN">​
+hello​
+</body>​
+</html>​
+​
